--- a/public/index.html
+++ b/public/index.html
@@ -3,25 +3,25 @@
 <head>
 	<meta charset='UTF-8' />
 	<title>MORACE</title>
-	<link rel="stylesheet" href="public/style.css" />
+	<link rel="stylesheet" href="style.css" />
 </head>
 <body>	
 
 
-	<script src="public/js/socketio.js"></script>
-	<script src="public/js/jquery.js"></script>
-	<script src="public/mustache.min.js"></script>
+	<script src="js/socketio.js"></script>
+	<script src="js/jquery.js"></script>
+	<script src="mustache.min.js"></script>
 
-	<script src="public/js/main.js"></script>
-	<script src="public/js/config.js"></script>
-	<script src="public/js/common.js"></script>
-	<script src="public/js/socketioevent.js"></script>
-	<script src="public/js/userEvent.js"></script>
-	<script src="public/js/clientFunctions.js"></script>
+	<script src="js/main.js"></script>
+	<script src="js/config.js"></script>
+	<script src="js/common.js"></script>
+	<script src="js/socketioevent.js"></script>
+	<script src="js/userEvent.js"></script>
+	<script src="js/clientFunctions.js"></script>
 
-	<script src="public/js/Player.js"></script>
-	<script src="public/js/Room.js"></script>
-	<script src="public/js/Display.js"></script>
-	<script src="public/js/Client.js"></script>
+	<script src="js/Player.js"></script>
+	<script src="js/Room.js"></script>
+	<script src="js/Display.js"></script>
+	<script src="js/Client.js"></script>
 </body>
 </html>
