--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>	
 
-	<canvas id="canvas" width="1000" height="800"></canvas>
+	Temps restant : <span id="cooldown"></span><br/>
+	<canvas id="canvas" width="100" height="100"></canvas>
 
 	<div id="ConnectionPanel">
 		Connexion
