Ajout collision route
Problème interpolation

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
 
 	Temps restant : <span id="cooldown"></span><br/>
 	<canvas id="canvas" width="1000" height="1000"></canvas>
+	<canvas id="roadCollision" width="500" height="500" hidden></canvas>
+
 
 	<div id="ConnectionPanel">
 		Connexion
