Début tchat smiley + suppression de la suppressio de room
:+1:

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,6 @@
 
 
 	<div id="ConnectionPanel">
-
 		Connexion
 		<form id="login">
 			<input type="text" palceholder="login" id="login_login">
@@ -45,6 +44,11 @@
 		<div id="finish"></div>
 		<div id="ranking"></div>
 	<div>	
+
+	<div id="tchat">
+		<ul id="messages"></ul>
+		<div id="emoji"></div>
+	</div>
 
 	<script src="js/socketio.js"></script>
 	<script src="js/jquery.js"></script>
