--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,6 @@
 	<link rel="stylesheet" href="style.css" />
 </head>
 <body>	
-
-
-
 	<div id="ConnectionPanel">
 		Connexion
 		<form id="login">
@@ -37,7 +34,7 @@
 	<div id="race">
 		<div id="cooldown"></div>
 		<canvas id="canvas" width="1000" height="1000"></canvas>
-		<canvas id="roadCollision" width="500" height="500"></canvas>
+		<canvas id="roadCollision" width="500" height="500" hidden></canvas>
 		<div id="raceTimestamp"><div>
 		<div id="nblap"></div>
 		<canvas id="minimap"></canvas>
