Corresction problème affichage (chargement map)

--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
 	<div id="race">
 		<div id="cooldown"></div>
 		<canvas id="canvas" width="1000" height="1000"></canvas>
-		<canvas id="roadCollision" width="500" height="500" hidden></canvas>
+		<canvas id="roadCollision" width="500" height="500"></canvas>
 		<div id="raceTimestamp"><div>
 		<div id="nblap"></div>
 		<canvas id="minimap"></canvas>
