ok nice :relaxed:

--- a/public/index.html
+++ b/public/index.html
@@ -84,7 +84,7 @@
 					<button type="submit" class="pure-button pure-button-primary pure-input-1">Participate</button>
 				</form>
 				<div class="l-box">
-					<canvas id="mappolls" width="100%"></canvas>
+					<canvas id="mappolls" width="300px" height="300px"></canvas>
 				</div>
 			</div>
 		</div>
