--- a/public/index.html
+++ b/public/index.html
@@ -101,6 +101,18 @@
 			</div>
 		</div>
 
+		<div id="ranking" class="pannel" hidden>
+			<div id="cooldown"></div>
+			<canvas id="canvas" width="1000" height="1000"></canvas>
+			<canvas id="roadCollision" width="500" height="500" style="display:none"></canvas>
+			<div id="raceTimestamp"><div>
+				<div id="nblap"></div>
+				<canvas id="minimap" style="display:none"></canvas>
+				<div id="finish"></div>
+				<div id="ranking"></div>
+			</div>
+		</div>
+
 		<script src="js/lib/jquery.js"></script>
 		<script src="js/lib/socketio.js"></script>
 		<script src="js/lib/mustache.min.js"></script>
