--- a/public/RaceEdit.html
+++ b/public/RaceEdit.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset='UTF-8' />
 	<title>MORACE</title>
-	<link rel="stylesheet" href="style.css" />
+	<link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
 
@@ -15,7 +15,7 @@
 
 	<img id="img" src="lol.png">
 
-	<script src="js/jquery.js"></script>
+	<script src="js/lib/jquery.js"></script>
 
 	<script src="js/main.js"></script>
 	<script src="js/config.js"></script>
