--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
 	<title>OnRace</title>
 	<link rel="stylesheet" href="css/home.css" />
 	<link rel="stylesheet" href="css/lobby.css" />
+	<link rel="stylesheet" href="css/race.css" />
 	<link rel="stylesheet" href="css/style.css" />
 	<link rel="stylesheet" href="css/hint.base.min.css" />
 	<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">
@@ -56,7 +57,7 @@
 				</div>
 
 				<div class="l-box">
-					<!-- <iframe width="100%" height="370px" src="https://www.youtube.com/embed/xtqOzcm0pEM" frameborder="0" allowfullscreen></iframe> -->
+					<iframe width="100%" height="370px" src="https://www.youtube.com/embed/nwcMikUUyow" frameborder="0" allowfullscreen></iframe>
 				</div>
 			</div>
 		</div>
@@ -89,28 +90,15 @@
 			</div>
 		</div>
 
-		<div id="race" class="pannel" hidden>
-			<div id="cooldown"></div>
-			<canvas id="canvas" width="1000" height="1000"></canvas>
+		<div id="race" class="pure-g">
+			<canvas id="canvas" width="100" height="100"></canvas>
+			<div id="cooldown">1:07.12</div>
 			<canvas id="roadCollision" width="500" height="500" style="display:none"></canvas>
-			<div id="raceTimestamp"><div>
-				<div id="nblap"></div>
-				<canvas id="minimap" style="display:none"></canvas>
-				<div id="finish"></div>
-				<div id="ranking"></div>
-			</div>
-		</div>
-
-		<div id="ranking" class="pannel" hidden>
-			<div id="cooldown"></div>
-			<canvas id="canvas" width="1000" height="1000"></canvas>
-			<canvas id="roadCollision" width="500" height="500" style="display:none"></canvas>
-			<div id="raceTimestamp"><div>
-				<div id="nblap"></div>
-				<canvas id="minimap" style="display:none"></canvas>
-				<div id="finish"></div>
-				<div id="ranking"></div>
-			</div>
+			<div id="raceTimestamp">0:47.89</div>
+			<div id="nblap">1/3</div>
+			<canvas id="minimap" style="display:none"></canvas>
+			<div id="finish"></div>
+			<div id="ranking"></div>
 		</div>
 
 		<script src="js/lib/jquery.js"></script>
