--- a/public/index.html
+++ b/public/index.html
@@ -96,9 +96,8 @@
 			<canvas id="roadCollision" width="500" height="500" style="display:none"></canvas>
 			<div id="raceTimestamp">0:47.89</div>
 			<div id="nblap">1/3</div>
-			<canvas id="minimap" style="display:none"></canvas>
+			<canvas id="minimap"></canvas>
 			<div id="finish"></div>
-			<div id="ranking"></div>
 		</div>
 
 		<script src="js/lib/jquery.js"></script>
