--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,9 @@
 	<link rel="stylesheet" href="css/home.css" />
 	<link rel="stylesheet" href="css/lobby.css" />
 	<link rel="stylesheet" href="css/race.css" />
+	<link rel="stylesheet" href="css/ranking.css" />
 	<link rel="stylesheet" href="css/style.css" />
+	<link rel="stylesheet" href="css/tchat.css" />
 	<link rel="stylesheet" href="css/hint.base.min.css" />
 	<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
@@ -62,6 +64,26 @@
 			</div>
 		</div>
 
+		<!-- TCHAT -->
+		<div class="tchat" class="pure-g">
+			<ul id="messages" class="pure-u-1">
+				<li><span>ElBazia</span> : Wtf abusé</li>
+				<li><span>ElBazia</span> : Wtf abusé</li>
+				<li><span>ElBazia</span> : Wtf abusé</li>
+				<li><span>ElBazia</span> : Wtf abusé</li>
+				<li><span>ElBazia</span> : Wtf abusé</li>
+			</ul>
+			<form class="pure-form pure-g">
+				<div class="pure-u-3-4">
+					<input type="text" placeholder="Message" class="pure-input-1">
+				</div>
+				<div class="pure-u-1-4">
+					<button type="submit" class="pure-input-1 pure-button pure-button-primary">Send</button>
+				</div>
+				
+			</form>
+		</div>
+
 		<!-- LOBBY -->
 		<div id="lobby" class="pure-g">
 			<div class="pure-u-1-3">
@@ -90,15 +112,55 @@
 			</div>
 		</div>
 
+		<!-- RACE -->
 		<div id="race" class="pure-g">
 			<canvas id="canvas" width="100" height="100"></canvas>
-			<div id="cooldown">1:07.12</div>
 			<canvas id="roadCollision" width="500" height="500" style="display:none"></canvas>
-			<div id="raceTimestamp">0:47.89</div>
+			<div class="time">
+				<div id="raceTimestamp">0:47.89</div>
+				<div id="cooldown">1:07.12</div>
+			</div>
+			
 			<div id="nblap">1/3</div>
 			<canvas id="minimap"></canvas>
 			<div id="finish"></div>
 		</div>
+
+		<!-- RANKING -->
+		<div id="ranking" class="pure-g">
+			<div class="pure-u-3-4">
+				<table class="pure-table">
+					<thead>
+						<tr>
+							<th>#</th>
+							<th>Player</th>
+							<th>Time</th>
+							<th>Medaille</th>
+							<th>Elo</th>
+							<th>Delta Elo</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr class="pure-table"><td>1</td><td>ElBazia</td><td>01:37.74</td><td>O</td><td>1784</td><td>+13</td></tr>
+						<tr class="pure-table"><td>1</td><td>ElBazia</td><td>01:37.74</td><td>O</td><td>1784</td><td>+13</td></tr>
+						<tr class="pure-table"><td>1</td><td>ElBazia</td><td>01:37.74</td><td>O</td><td>1784</td><td>+13</td></tr>
+						<tr class="pure-table"><td>1</td><td>ElBazia</td><td>01:37.74</td><td>O</td><td>1784</td><td>+13</td></tr>
+						<tr class="pure-table"><td>1</td><td>ElBazia</td><td>01:37.74</td><td>O</td><td>1784</td><td>+13</td></tr>
+						<tr class="pure-table"><td>1</td><td>ElBazia</td><td>01:37.74</td><td>O</td><td>1784</td><td>+13</td></tr>
+						<tr class="pure-table"><td>1</td><td>ElBazia</td><td>01:37.74</td><td>O</td><td>1784</td><td>+13</td></tr>
+						<tr class="pure-table"><td>1</td><td>ElBazia</td><td>01:37.74</td><td>O</td><td>1784</td><td>+13</td></tr>
+						<tr class="pure-table"><td>1</td><td>ElBazia</td><td>01:37.74</td><td>O</td><td>1784</td><td>+13</td></tr>
+						<tr class="pure-table"><td>1</td><td>ElBazia</td><td>01:37.74</td><td>O</td><td>1784</td><td>+13</td></tr>
+						<tr class="pure-table"><td>1</td><td>ElBazia</td><td>01:37.74</td><td>O</td><td>1784</td><td>+13</td></tr>
+					</tbody>
+				</table>
+			</div>
+			<div class="pure-u-1-4">
+				DROPS
+			</div>
+		</div>
+
+
 
 		<script src="js/lib/jquery.js"></script>
 		<script src="js/lib/socketio.js"></script>
