Interface :red_car:

--- a/public/index.html
+++ b/public/index.html
@@ -128,7 +128,7 @@
 
 		<!-- RANKING -->
 		<div id="ranking" class="pure-g">
-			<div class="pure-u-3-4">
+			<div class="pure-u-3-4 ranking">
 				<table class="pure-table">
 					<thead>
 						<tr>
@@ -152,12 +152,81 @@
 						<tr class="pure-table"><td>1</td><td>ElBazia</td><td>01:37.74</td><td>O</td><td>1784</td><td>+13</td></tr>
 						<tr class="pure-table"><td>1</td><td>ElBazia</td><td>01:37.74</td><td>O</td><td>1784</td><td>+13</td></tr>
 						<tr class="pure-table"><td>1</td><td>ElBazia</td><td>01:37.74</td><td>O</td><td>1784</td><td>+13</td></tr>
+						<tr class="pure-table"><td>1</td><td>ElBazia</td><td>01:37.74</td><td>O</td><td>1784</td><td>+13</td></tr>
+						<tr class="pure-table"><td>1</td><td>ElBazia</td><td>01:37.74</td><td>O</td><td>1784</td><td>+13</td></tr>
+						<tr class="pure-table"><td>1</td><td>ElBazia</td><td>01:37.74</td><td>O</td><td>1784</td><td>+13</td></tr>
+						<tr class="pure-table"><td>1</td><td>ElBazia</td><td>01:37.74</td><td>O</td><td>1784</td><td>+13</td></tr>
+						<tr class="pure-table"><td>1</td><td>ElBazia</td><td>01:37.74</td><td>O</td><td>1784</td><td>+13</td></tr>
+						<tr class="pure-table"><td>1</td><td>ElBazia</td><td>01:37.74</td><td>O</td><td>1784</td><td>+13</td></tr>
+						<tr class="pure-table"><td>1</td><td>ElBazia</td><td>01:37.74</td><td>O</td><td>1784</td><td>+13</td></tr>
+						<tr class="pure-table"><td>1</td><td>ElBazia</td><td>01:37.74</td><td>O</td><td>1784</td><td>+13</td></tr>
+						<tr class="pure-table"><td>1</td><td>ElBazia</td><td>01:37.74</td><td>O</td><td>1784</td><td>+13</td></tr>
+						<tr class="pure-table"><td>1</td><td>ElBazia</td><td>01:37.74</td><td>O</td><td>1784</td><td>+13</td></tr>
+						<tr class="pure-table"><td>1</td><td>ElBazia</td><td>01:37.74</td><td>O</td><td>1784</td><td>+13</td></tr>
+						<tr class="pure-table"><td>1</td><td>ElBazia</td><td>01:37.74</td><td>O</td><td>1784</td><td>+13</td></tr>
+						<tr class="pure-table"><td>1</td><td>ElBazia</td><td>01:37.74</td><td>O</td><td>1784</td><td>+13</td></tr>
+						<tr class="pure-table"><td>1</td><td>ElBazia</td><td>01:37.74</td><td>O</td><td>1784</td><td>+13</td></tr>
+						<tr class="pure-table"><td>1</td><td>ElBazia</td><td>01:37.74</td><td>O</td><td>1784</td><td>+13</td></tr>
+						<tr class="pure-table"><td>1</td><td>ElBazia</td><td>01:37.74</td><td>O</td><td>1784</td><td>+13</td></tr>
+						<tr class="pure-table"><td>1</td><td>ElBazia</td><td>01:37.74</td><td>O</td><td>1784</td><td>+13</td></tr>
+						<tr class="pure-table"><td>1</td><td>ElBazia</td><td>01:37.74</td><td>O</td><td>1784</td><td>+13</td></tr>
+						<tr class="pure-table"><td>1</td><td>ElBazia</td><td>01:37.74</td><td>O</td><td>1784</td><td>+13</td></tr>
+						<tr class="pure-table"><td>1</td><td>ElBazia</td><td>01:37.74</td><td>O</td><td>1784</td><td>+13</td></tr>
 					</tbody>
 				</table>
 			</div>
-			<div class="pure-u-1-4">
-				DROPS
+			<div class="pure-u-1-4 drops">
+				<div class="drop">
+					<img src="https://upload.wikimedia.org/wikipedia/en/thumb/6/63/IMG_(business).svg/1280px-IMG_(business).svg.png" width="100%">
+					<div class="player">Elbazia</div>
+				</div>
+				<div class="drop">
+					<img src="https://upload.wikimedia.org/wikipedia/en/thumb/6/63/IMG_(business).svg/1280px-IMG_(business).svg.png" width="100%">
+					<div class="player">Elbazia</div>
+				</div>
+				<div class="drop">
+					<img src="https://upload.wikimedia.org/wikipedia/en/thumb/6/63/IMG_(business).svg/1280px-IMG_(business).svg.png" width="100%">
+					<div class="player">Elbazia</div>
+				</div>
+				<div class="drop">
+					<img src="https://upload.wikimedia.org/wikipedia/en/thumb/6/63/IMG_(business).svg/1280px-IMG_(business).svg.png" width="100%">
+					<div class="player">Elbazia</div>
+				</div>
+				<div class="drop">
+					<img src="https://upload.wikimedia.org/wikipedia/en/thumb/6/63/IMG_(business).svg/1280px-IMG_(business).svg.png" width="100%">
+					<div class="player">Elbazia</div>
+				</div>
+				<div class="drop">
+					<img src="https://upload.wikimedia.org/wikipedia/en/thumb/6/63/IMG_(business).svg/1280px-IMG_(business).svg.png" width="100%">
+					<div class="player">Elbazia</div>
+				</div>
+				<div class="drop">
+					<img src="https://upload.wikimedia.org/wikipedia/en/thumb/6/63/IMG_(business).svg/1280px-IMG_(business).svg.png" width="100%">
+					<div class="player">Elbazia</div>
+				</div>
+				<div class="drop">
+					<img src="https://upload.wikimedia.org/wikipedia/en/thumb/6/63/IMG_(business).svg/1280px-IMG_(business).svg.png" width="100%">
+					<div class="player">Elbazia</div>
+				</div>
+				<div class="drop">
+					<img src="https://upload.wikimedia.org/wikipedia/en/thumb/6/63/IMG_(business).svg/1280px-IMG_(business).svg.png" width="100%">
+					<div class="player">Elbazia</div>
+				</div>
+				<div class="drop">
+					<img src="https://upload.wikimedia.org/wikipedia/en/thumb/6/63/IMG_(business).svg/1280px-IMG_(business).svg.png" width="100%">
+					<div class="player">Elbazia</div>
+				</div>
+				<div class="drop">
+					<img src="https://upload.wikimedia.org/wikipedia/en/thumb/6/63/IMG_(business).svg/1280px-IMG_(business).svg.png" width="100%">
+					<div class="player">Elbazia</div>
+				</div>
+				<div class="drop">
+					<img src="https://upload.wikimedia.org/wikipedia/en/thumb/6/63/IMG_(business).svg/1280px-IMG_(business).svg.png" width="100%">
+					<div class="player">Elbazia</div>
+				</div>
 			</div>
+
+			<button class="pure-button pure-button-primary backToLobby">OK</button>
 		</div>
 
 
