--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
 <body>	
 	<div id="game" >
 		<!-- HOME -->
-		<div id="home" class="pure-g">
+		<div id="home" class="pure-g page">
 			<div class="playerOnline pure-u-1"><span id="onlinePlayers"></span> <i class="fa fa-user"></i></div>
 			<div class="pure-u-1">
 				<div class="l-box">
@@ -85,7 +85,7 @@
 		</div>
 
 		<!-- LOBBY -->
-		<div id="lobby" class="pure-g">
+		<div id="lobby" class="pure-g page">
 			<div class="pure-u-1-3">
 				<div class="l-box">
 					<form class="pure-form pure-form-stacked">
@@ -113,11 +113,11 @@
 		</div>
 
 		<!-- RACE -->
-		<div id="race" class="pure-g">
-			<canvas id="canvas" width="100" height="100"></canvas>
-			<canvas id="roadCollision" width="500" height="500" style="display:none"></canvas>
+		<div id="race" class="pure-g page">
+			<canvas id="canvas" width="100%" height="100%"></canvas>
+			<canvas id="roadCollision" width="100" height="100" style="display:none"></canvas>
 			<div class="time">
-				<div id="raceTimestamp">0:47.89</div>
+				<p id="raceTimestamp">0:47.89</p>
 				<div id="cooldown">1:07.12</div>
 			</div>
 			
@@ -127,7 +127,7 @@
 		</div>
 
 		<!-- RANKING -->
-		<div id="ranking" class="pure-g">
+		<div id="ranking" class="pure-g page">
 			<div class="pure-u-3-4 ranking">
 				<table class="pure-table">
 					<thead>
@@ -142,36 +142,6 @@
 					</thead>
 					<tbody>
 						<tr class="pure-table"><td>1</td><td>ElBazia</td><td>01:37.74</td><td>O</td><td>1784</td><td>+13</td></tr>
-						<tr class="pure-table"><td>1</td><td>ElBazia</td><td>01:37.74</td><td>O</td><td>1784</td><td>+13</td></tr>
-						<tr class="pure-table"><td>1</td><td>ElBazia</td><td>01:37.74</td><td>O</td><td>1784</td><td>+13</td></tr>
-						<tr class="pure-table"><td>1</td><td>ElBazia</td><td>01:37.74</td><td>O</td><td>1784</td><td>+13</td></tr>
-						<tr class="pure-table"><td>1</td><td>ElBazia</td><td>01:37.74</td><td>O</td><td>1784</td><td>+13</td></tr>
-						<tr class="pure-table"><td>1</td><td>ElBazia</td><td>01:37.74</td><td>O</td><td>1784</td><td>+13</td></tr>
-						<tr class="pure-table"><td>1</td><td>ElBazia</td><td>01:37.74</td><td>O</td><td>1784</td><td>+13</td></tr>
-						<tr class="pure-table"><td>1</td><td>ElBazia</td><td>01:37.74</td><td>O</td><td>1784</td><td>+13</td></tr>
-						<tr class="pure-table"><td>1</td><td>ElBazia</td><td>01:37.74</td><td>O</td><td>1784</td><td>+13</td></tr>
-						<tr class="pure-table"><td>1</td><td>ElBazia</td><td>01:37.74</td><td>O</td><td>1784</td><td>+13</td></tr>
-						<tr class="pure-table"><td>1</td><td>ElBazia</td><td>01:37.74</td><td>O</td><td>1784</td><td>+13</td></tr>
-						<tr class="pure-table"><td>1</td><td>ElBazia</td><td>01:37.74</td><td>O</td><td>1784</td><td>+13</td></tr>
-						<tr class="pure-table"><td>1</td><td>ElBazia</td><td>01:37.74</td><td>O</td><td>1784</td><td>+13</td></tr>
-						<tr class="pure-table"><td>1</td><td>ElBazia</td><td>01:37.74</td><td>O</td><td>1784</td><td>+13</td></tr>
-						<tr class="pure-table"><td>1</td><td>ElBazia</td><td>01:37.74</td><td>O</td><td>1784</td><td>+13</td></tr>
-						<tr class="pure-table"><td>1</td><td>ElBazia</td><td>01:37.74</td><td>O</td><td>1784</td><td>+13</td></tr>
-						<tr class="pure-table"><td>1</td><td>ElBazia</td><td>01:37.74</td><td>O</td><td>1784</td><td>+13</td></tr>
-						<tr class="pure-table"><td>1</td><td>ElBazia</td><td>01:37.74</td><td>O</td><td>1784</td><td>+13</td></tr>
-						<tr class="pure-table"><td>1</td><td>ElBazia</td><td>01:37.74</td><td>O</td><td>1784</td><td>+13</td></tr>
-						<tr class="pure-table"><td>1</td><td>ElBazia</td><td>01:37.74</td><td>O</td><td>1784</td><td>+13</td></tr>
-						<tr class="pure-table"><td>1</td><td>ElBazia</td><td>01:37.74</td><td>O</td><td>1784</td><td>+13</td></tr>
-						<tr class="pure-table"><td>1</td><td>ElBazia</td><td>01:37.74</td><td>O</td><td>1784</td><td>+13</td></tr>
-						<tr class="pure-table"><td>1</td><td>ElBazia</td><td>01:37.74</td><td>O</td><td>1784</td><td>+13</td></tr>
-						<tr class="pure-table"><td>1</td><td>ElBazia</td><td>01:37.74</td><td>O</td><td>1784</td><td>+13</td></tr>
-						<tr class="pure-table"><td>1</td><td>ElBazia</td><td>01:37.74</td><td>O</td><td>1784</td><td>+13</td></tr>
-						<tr class="pure-table"><td>1</td><td>ElBazia</td><td>01:37.74</td><td>O</td><td>1784</td><td>+13</td></tr>
-						<tr class="pure-table"><td>1</td><td>ElBazia</td><td>01:37.74</td><td>O</td><td>1784</td><td>+13</td></tr>
-						<tr class="pure-table"><td>1</td><td>ElBazia</td><td>01:37.74</td><td>O</td><td>1784</td><td>+13</td></tr>
-						<tr class="pure-table"><td>1</td><td>ElBazia</td><td>01:37.74</td><td>O</td><td>1784</td><td>+13</td></tr>
-						<tr class="pure-table"><td>1</td><td>ElBazia</td><td>01:37.74</td><td>O</td><td>1784</td><td>+13</td></tr>
-						<tr class="pure-table"><td>1</td><td>ElBazia</td><td>01:37.74</td><td>O</td><td>1784</td><td>+13</td></tr>
 					</tbody>
 				</table>
 			</div>
@@ -180,53 +150,8 @@
 					<img src="https://upload.wikimedia.org/wikipedia/en/thumb/6/63/IMG_(business).svg/1280px-IMG_(business).svg.png" width="100%">
 					<div class="player">Elbazia</div>
 				</div>
-				<div class="drop">
-					<img src="https://upload.wikimedia.org/wikipedia/en/thumb/6/63/IMG_(business).svg/1280px-IMG_(business).svg.png" width="100%">
-					<div class="player">Elbazia</div>
-				</div>
-				<div class="drop">
-					<img src="https://upload.wikimedia.org/wikipedia/en/thumb/6/63/IMG_(business).svg/1280px-IMG_(business).svg.png" width="100%">
-					<div class="player">Elbazia</div>
-				</div>
-				<div class="drop">
-					<img src="https://upload.wikimedia.org/wikipedia/en/thumb/6/63/IMG_(business).svg/1280px-IMG_(business).svg.png" width="100%">
-					<div class="player">Elbazia</div>
-				</div>
-				<div class="drop">
-					<img src="https://upload.wikimedia.org/wikipedia/en/thumb/6/63/IMG_(business).svg/1280px-IMG_(business).svg.png" width="100%">
-					<div class="player">Elbazia</div>
-				</div>
-				<div class="drop">
-					<img src="https://upload.wikimedia.org/wikipedia/en/thumb/6/63/IMG_(business).svg/1280px-IMG_(business).svg.png" width="100%">
-					<div class="player">Elbazia</div>
-				</div>
-				<div class="drop">
-					<img src="https://upload.wikimedia.org/wikipedia/en/thumb/6/63/IMG_(business).svg/1280px-IMG_(business).svg.png" width="100%">
-					<div class="player">Elbazia</div>
-				</div>
-				<div class="drop">
-					<img src="https://upload.wikimedia.org/wikipedia/en/thumb/6/63/IMG_(business).svg/1280px-IMG_(business).svg.png" width="100%">
-					<div class="player">Elbazia</div>
-				</div>
-				<div class="drop">
-					<img src="https://upload.wikimedia.org/wikipedia/en/thumb/6/63/IMG_(business).svg/1280px-IMG_(business).svg.png" width="100%">
-					<div class="player">Elbazia</div>
-				</div>
-				<div class="drop">
-					<img src="https://upload.wikimedia.org/wikipedia/en/thumb/6/63/IMG_(business).svg/1280px-IMG_(business).svg.png" width="100%">
-					<div class="player">Elbazia</div>
-				</div>
-				<div class="drop">
-					<img src="https://upload.wikimedia.org/wikipedia/en/thumb/6/63/IMG_(business).svg/1280px-IMG_(business).svg.png" width="100%">
-					<div class="player">Elbazia</div>
-				</div>
-				<div class="drop">
-					<img src="https://upload.wikimedia.org/wikipedia/en/thumb/6/63/IMG_(business).svg/1280px-IMG_(business).svg.png" width="100%">
-					<div class="player">Elbazia</div>
-				</div>
 			</div>
-
-			<button class="pure-button pure-button-primary backToLobby">OK</button>
+			<button class="pure-button pure-button-primary backToLobby">Return to lobby</button>
 		</div>
 
 
@@ -235,6 +160,7 @@
 		<script src="js/lib/socketio.js"></script>
 		<script src="js/lib/mustache.min.js"></script>
 		<script src="js/lib/superplaceholder.min.js"></script>
+		<script src="js/lib/vue.js"></script>
 
 		<script src="js/main.js"></script>
 		<script src="js/config.js"></script>
